@@ -6,29 +6,20 @@ class RBMGaussHid(RBMBase):
         RBMBase.__init__(self, vis_num, hid_num)
 
     def p_h_given_v(self, v):
-        w = (torch.flatten(self.w.clone())).view(self.hid_num, self.vis_num)
-
+        w = self.w.clone()
         if v.dim() != 2:
-            v = v.clone().unsqueeze(1)
+            v = v.clone().view(self.vis_num, 1)
 
-        print("----------->", w.dim(), "==============>", v.dim())
+        if list(v.size()) == list(w.size()):
+            v = v.clone().view(list(w.size())[1], list(w.size())[0])
+
         print("<-----------", w.size(), "<==============", v.size())
+        print("----------->", w.dim(), "==============>", v.dim())
         
         return torch.matmul(
             w, v
         )   + self.b
-        # try:
-        #     print("{:-1^}Successfully worked")
-        #     return torch.matmul(
-        #         w, v
-        #     ) + self.b
-
-        # except RuntimeError:
-        #     print("{:-1^}Successfully FUCKED UP")
-        #     return torch.matmul(
-        #         w, v.view(self.vis_num, self.hid_num)
-        #     ) + self.b
-
+        
     def sample_h_given_v(self, v):
         h_prob = self.p_h_given_v(v)
         r = torch.randn(h_prob.size())
