@@ -9,8 +9,9 @@ Apr. 29. 2022 (B. InSung)
     - 현저히 같은 이슈. weight와 visible layer 의 input에서 tensor size가 맞지 않아서 충돌이 발생함.
     - 180 * 80 mul 180 * 80
           ^---w        ^---v
-        - ~~너무 깐깐한 놈임...~~
-
+    - torch.matmul을 통해서 사이즈를 맞춰줌. 허나, 이유는 모르겠으나 180 * 80와 80 * 180 사이즈 텐서를 넣었는데 (180 * 180) * (80 * 1) 텐서로 들어감.
+    - 수학적인 연산에 대한 내용으로 추측됨. 혹여 모를 사태를 대비해 일단 또 커밋. 멘탈이 나가면 안되닌까..
+    
 Apr. 28. 2022 (B. InSung)
 - Drunk night session...
 - GBRBM 에서 오류 발생
